--- a/Podcast.xcodeproj/xcshareddata/xcschemes/Podcast.xcscheme
+++ b/Podcast.xcodeproj/xcshareddata/xcschemes/Podcast.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "DBDE162122D78D7700BD646F"
-               BuildableName = "Podcast.app"
-               BlueprintName = "Podcast"
+               BuildableName = "MeyerCast.app"
+               BlueprintName = "MeyerCast"
                ReferencedContainer = "container:Podcast.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -33,8 +33,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "DBDE162122D78D7700BD646F"
-            BuildableName = "Podcast.app"
-            BlueprintName = "Podcast"
+            BuildableName = "MeyerCast.app"
+            BlueprintName = "MeyerCast"
             ReferencedContainer = "container:Podcast.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -58,8 +58,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "DBDE162122D78D7700BD646F"
-            BuildableName = "Podcast.app"
-            BlueprintName = "Podcast"
+            BuildableName = "MeyerCast.app"
+            BlueprintName = "MeyerCast"
             ReferencedContainer = "container:Podcast.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -77,8 +77,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "DBDE162122D78D7700BD646F"
-            BuildableName = "Podcast.app"
-            BlueprintName = "Podcast"
+            BuildableName = "MeyerCast.app"
+            BlueprintName = "MeyerCast"
             ReferencedContainer = "container:Podcast.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
